; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_btc_dpm.c_btc_dpm_get_current_mclk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_btc_dpm.c_btc_dpm_get_current_mclk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }
%struct.evergreen_power_info = type { %struct.radeon_ps }
%struct.radeon_ps = type { i32 }
%struct.rv7xx_ps = type { %struct.rv7xx_pl, %struct.rv7xx_pl, %struct.rv7xx_pl }
%struct.rv7xx_pl = type { i32 }

@TARGET_AND_CURRENT_PROFILE_INDEX = common dso_local global i32 0, align 4
@CURRENT_PROFILE_INDEX_MASK = common dso_local global i32 0, align 4
@CURRENT_PROFILE_INDEX_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btc_dpm_get_current_mclk(%struct.radeon_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.radeon_device*, align 8
  %4 = alloca %struct.evergreen_power_info*, align 8
  %5 = alloca %struct.radeon_ps*, align 8
  %6 = alloca %struct.rv7xx_ps*, align 8
  %7 = alloca %struct.rv7xx_pl*, align 8
  %8 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %3, align 8
  %9 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %10 = call %struct.evergreen_power_info* @evergreen_get_pi(%struct.radeon_device* %9)
  store %struct.evergreen_power_info* %10, %struct.evergreen_power_info** %4, align 8
  %11 = load %struct.evergreen_power_info*, %struct.evergreen_power_info** %4, align 8
  %12 = getelementptr inbounds %struct.evergreen_power_info, %struct.evergreen_power_info* %11, i32 0, i32 0
  store %struct.radeon_ps* %12, %struct.radeon_ps** %5, align 8
  %13 = load %struct.radeon_ps*, %struct.radeon_ps** %5, align 8
  %14 = call %struct.rv7xx_ps* @rv770_get_ps(%struct.radeon_ps* %13)
  store %struct.rv7xx_ps* %14, %struct.rv7xx_ps** %6, align 8
  %15 = load i32, i32* @TARGET_AND_CURRENT_PROFILE_INDEX, align 4
  %16 = call i32 @RREG32(i32 %15)
  %17 = load i32, i32* @CURRENT_PROFILE_INDEX_MASK, align 4
  %18 = and i32 %16, %17
  %19 = load i32, i32* @CURRENT_PROFILE_INDEX_SHIFT, align 4
  %20 = ashr i32 %18, %19
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp sgt i32 %21, 2
  br i1 %22, label %23, label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %44

24:                                               ; preds = %1
  %25 = load i32, i32* %8, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load %struct.rv7xx_ps*, %struct.rv7xx_ps** %6, align 8
  %29 = getelementptr inbounds %struct.rv7xx_ps, %struct.rv7xx_ps* %28, i32 0, i32 2
  store %struct.rv7xx_pl* %29, %struct.rv7xx_pl** %7, align 8
  br label %40

30:                                               ; preds = %24
  %31 = load i32, i32* %8, align 4
  %32 = icmp eq i32 %31, 1
  br i1 %32, label %33, label %36

33:                                               ; preds = %30
  %34 = load %struct.rv7xx_ps*, %struct.rv7xx_ps** %6, align 8
  %35 = getelementptr inbounds %struct.rv7xx_ps, %struct.rv7xx_ps* %34, i32 0, i32 1
  store %struct.rv7xx_pl* %35, %struct.rv7xx_pl** %7, align 8
  br label %39

36:                                               ; preds = %30
  %37 = load %struct.rv7xx_ps*, %struct.rv7xx_ps** %6, align 8
  %38 = getelementptr inbounds %struct.rv7xx_ps, %struct.rv7xx_ps* %37, i32 0, i32 0
  store %struct.rv7xx_pl* %38, %struct.rv7xx_pl** %7, align 8
  br label %39

39:                                               ; preds = %36, %33
  br label %40

40:                                               ; preds = %39, %27
  %41 = load %struct.rv7xx_pl*, %struct.rv7xx_pl** %7, align 8
  %42 = getelementptr inbounds %struct.rv7xx_pl, %struct.rv7xx_pl* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %40, %23
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local %struct.evergreen_power_info* @evergreen_get_pi(%struct.radeon_device*) #1

declare dso_local %struct.rv7xx_ps* @rv770_get_ps(%struct.radeon_ps*) #1

declare dso_local i32 @RREG32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
